Opened 15 years ago

Closed 15 years ago

#5788 closed bug (fixed)

Impossible to switch to any locale other than Engish

Reported by: koki Owned by: zooey
Priority: normal Milestone: R1/alpha2
Component: Kits/Locale Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Switching to a locale other than English using the Locale preflet does not work. There are two cases.

Case 1

  1. Open Locale preflet.
  2. Add locale other than English and set it to the top of the "Preferred languages" list.
  3. Close preflet.
  4. Open a localized app; you will see that it is still running in English instead of the preferred non-English locale.
  5. Upon re-opening the Locale preflet, one can see that the preferred language settings have been reverted to the default English only.

Case 2

  1. Open Locale preflet.
  2. Add locale other than English.
  3. Remove English from preferred languages list.
  4. Close preflet.
  5. Preflet crashes upon exit (bt attached) and the changes do not take effect.

Attachments (1)

2010-04-23_locale-pref-bug-5788 (3.4 KB ) - added by koki 15 years ago.
Locale preflet crash upon exit BT

Download all attachments as: .zip

Change History (5)

by koki, 15 years ago

Locale preflet crash upon exit BT

comment:1 by Karvjorm, 15 years ago

This is duplicate of Ticket #5755: http://dev.haiku-os.org/ticket/5755

in reply to:  1 comment:2 by anevilyak, 15 years ago

Replying to Karvjorm:

This is duplicate of Ticket #5755: http://dev.haiku-os.org/ticket/5755

Incorrect, only case 2 is. Case 1 describes a different problem.

comment:3 by zooey, 15 years ago

Owner: changed from pulkomandy to zooey
Status: newin-progress

comment:4 by zooey, 15 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev36561 - the two listviews now seem to work mostly.

Note: See TracTickets for help on using tickets.