Fix #5788 by overhauling the Locale preflet a bit: * InitiateDrag() now makes sure that either a number of top-level items   or a group of subitems sharing the parent is being dragged - anything   else doesn't really make sense and results in mayhem and/or crashes * LocaleWindow now tries harder to keep the language listview sorted * when moving around items between the two listviews, they are no longer   copied (and partly leaked), but the same items are now just moved over * cleanup here and there This is still somewhat of a mess - I recommend splitting the two listviews at least (as they actually behave differently) - maybe it would be better to pick the available languages from a popup-menu instead of keeping them in a listview?

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36561 a95241bf-73f2-0310-859d-f6bbb57e9c96